--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "license": "MIT",
   "dependencies": {
     "dotenv-safe": "^6.1.0",
+    "feedparser": "^2.2.9",
     "get-urls": "^9.1.0",
+    "iconv": "^2.3.4",
     "interval-promise": "^1.3.0",
     "lodash": "^4.17.11",
     "pg": "^7.11.0",
     "reflect-metadata": "^0.1.13",
-    "rss-parser": "^3.7.1",
+    "request": "^2.88.0",
     "telegraf": "^3.30.1",
     "telegraf-i18n": "^6.5.0",
     "telegraf-inline-menu": "^3.5.4",
@@ -30,7 +32,9 @@
   },
   "devDependencies": {
     "@types/dotenv-safe": "^5.0.3",
+    "@types/feedparser": "^2.2.2",
     "@types/node": "^12.0.4",
+    "@types/request": "^2.48.1",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
     "eslint": "^5.16.0",
