--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "dotenv-safe": "^6.1.0",
     "feedparser": "^2.2.9",
     "get-urls": "^9.1.0",
-    "iconv-lite": "^0.4.24",
+    "iconv-lite": "^0.5.0",
     "interval-promise": "^1.3.0",
     "lodash": "^4.17.11",
     "pg": "^7.11.0",
@@ -26,22 +26,31 @@
     "request": "^2.88.0",
     "telegraf": "^3.30.1",
     "telegraf-i18n": "^6.5.0",
-    "telegraf-inline-menu": "^3.5.4",
+    "telegraf-inline-menu": "^3.6.0",
     "typeorm": "^0.2.18",
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^8.0.0",
+    "@commitlint/config-conventional": "^8.0.0",
     "@types/dotenv-safe": "^5.0.3",
     "@types/feedparser": "^2.2.2",
-    "@types/node": "^12.0.7",
+    "@types/node": "^12.0.10",
     "@types/request": "^2.48.1",
-    "@typescript-eslint/eslint-plugin": "^1.9.0",
-    "@typescript-eslint/parser": "^1.9.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.3.0",
+    "@typescript-eslint/eslint-plugin": "^1.11.0",
+    "@typescript-eslint/parser": "^1.11.0",
+    "eslint": "^6.0.1",
+    "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
-    "prettier": "^1.18.0",
+    "husky": "^2.7.0",
+    "prettier": "^1.18.2",
     "rimraf": "^2.6.3",
-    "typescript": "^3.5.1"
+    "typescript": "^3.5.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
