build: update deps, setup prettier

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,15 @@
+NODE_ENV=development
+
 TELEGRAM_TOKEN=
 ADMIN_ID=
+
 DB_HOST=
 DB_PORT=
 DB_PASS=
 DB_USER=
 DB_NAME=
+
+TWITTER_CONSUMER_KEY=
+TWITTER_CONSUMER_SECRET=
+TWITTER_TOKEN_KEY=
+TWITTER_TOKEN_SECRET=
