--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Boris Ryabov",
   "license": "MIT",
   "dependencies": {
+    "date-fns": "^1.30.1",
     "dotenv-safe": "^6.1.0",
     "feedparser": "^2.2.9",
     "get-urls": "^9.1.0",
@@ -25,7 +26,7 @@
     "pretty-quick": "^1.11.1",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.0",
-    "telegraf": "^3.30.1",
+    "telegraf": "^3.32.0",
     "telegraf-i18n": "^6.5.0",
     "telegraf-inline-menu": "^3.6.0",
     "typeorm": "^0.2.18",
@@ -36,14 +37,14 @@
     "@commitlint/config-conventional": "^8.1.0",
     "@types/dotenv-safe": "^5.0.3",
     "@types/feedparser": "^2.2.3",
-    "@types/node": "^12.6.8",
+    "@types/node": "^12.6.9",
     "@types/request": "^2.48.2",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
-    "husky": "^3.0.1",
+    "husky": "^3.0.2",
     "prettier": "^1.18.2",
     "rimraf": "^2.6.3",
     "typescript": "^3.5.3"
