build: update deps

--- a/package.json
+++ b/package.json
@@ -15,21 +15,22 @@
   "author": "Boris Ryabov",
   "license": "MIT",
   "dependencies": {
-    "date-fns": "^1.30.1",
-    "dotenv-safe": "^6.1.0",
+    "date-fns": "^2.2.1",
+    "dotenv-safe": "^8.1.0",
     "feedparser": "^2.2.9",
     "get-urls": "^9.1.0",
     "iconv-lite": "^0.5.0",
     "interval-promise": "^1.3.0",
     "lodash": "^4.17.15",
-    "pg": "^7.12.0",
+    "pg": "^7.12.1",
+    "pg-native": "^3.0.0",
     "pretty-quick": "^1.11.1",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.0",
     "telegraf": "^3.32.0",
-    "telegraf-i18n": "^6.5.0",
-    "telegraf-inline-menu": "^3.6.0",
-    "typeorm": "^0.2.18",
+    "telegraf-i18n": "^6.6.0",
+    "telegraf-inline-menu": "^3.6.2",
+    "typeorm": "^0.2.19",
     "winston": "^3.2.1"
   },
   "devDependencies": {
@@ -37,17 +38,17 @@
     "@commitlint/config-conventional": "^8.1.0",
     "@types/dotenv-safe": "^5.0.3",
     "@types/feedparser": "^2.2.3",
-    "@types/node": "^12.6.9",
-    "@types/request": "^2.48.2",
-    "@typescript-eslint/eslint-plugin": "^1.13.0",
-    "@typescript-eslint/parser": "^1.13.0",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.0.0",
+    "@types/node": "^12.7.5",
+    "@types/request": "^2.48.3",
+    "@typescript-eslint/eslint-plugin": "^2.2.0",
+    "@typescript-eslint/parser": "^2.2.0",
+    "eslint": "^6.4.0",
+    "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-prettier": "^3.1.0",
-    "husky": "^3.0.2",
+    "husky": "^3.0.5",
     "prettier": "^1.18.2",
-    "rimraf": "^2.6.3",
-    "typescript": "^3.5.3"
+    "rimraf": "^3.0.0",
+    "typescript": "^3.6.3"
   },
   "husky": {
     "hooks": {
