build: update deps

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "skipLibCheck": true,
+    "inlineSourceMap": true,
     "baseUrl": ".",
     "paths": {
       "*": ["node_modules/"],
