--- a/package.json
+++ b/package.json
@@ -15,23 +15,24 @@
   "author": "Boris Ryabov",
   "license": "MIT",
   "dependencies": {
-    "date-fns": "^2.12.0",
+    "date-fns": "^2.14.0",
     "dotenv-safe": "^8.2.0",
-    "feedparser": "^2.2.9",
+    "feedparser": "^2.2.10",
     "get-urls": "^9.2.0",
     "iconv-lite": "^0.5.1",
     "interval-promise": "^1.4.0",
     "lodash": "^4.17.15",
     "p-limit": "^2.3.0",
-    "pg": "^8.0.2",
+    "pg": "^8.2.1",
     "pg-native": "^3.0.0",
     "pretty-quick": "^2.0.1",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
-    "telegraf": "^3.37.0",
+    "telegraf": "^3.38.0",
     "telegraf-i18n": "^6.6.0",
-    "telegraf-inline-menu": "^4.0.0",
-    "typeorm": "^0.2.24",
+    "telegraf-inline-menu": "^5.0.0-beta.4",
+    "telegraf-stateless-question": "^0.1.1",
+    "typeorm": "^0.2.25",
     "winston": "^3.2.1"
   },
   "devDependencies": {
@@ -39,17 +40,17 @@
     "@commitlint/config-conventional": "^8.3.4",
     "@types/dotenv-safe": "^8.1.0",
     "@types/feedparser": "^2.2.3",
-    "@types/node": "^13.11.1",
-    "@types/request": "^2.48.4",
-    "@typescript-eslint/eslint-plugin": "^2.28.0",
-    "@typescript-eslint/parser": "^2.28.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
+    "@types/node": "^14.0.6",
+    "@types/request": "^2.48.5",
+    "@typescript-eslint/eslint-plugin": "^3.0.2",
+    "@typescript-eslint/parser": "^3.0.2",
+    "eslint": "^7.1.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.5",
-    "prettier": "^2.0.4",
+    "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.3"
   },
   "husky": {
     "hooks": {
