refactor: rewrite RSS parser

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 TELEGRAM_TOKEN=
+TELEGRAM_HTTPS_PROXY=
+
 ADMIN_ID=
 
 DB_HOST=
@@ -11,5 +13,3 @@ WEBHOOK_DOMAIN=
 WEBHOOK_HOST=
 WEBHOOK_PATH=
 WEBHOOK_PORT=
-
-HTTPS_PROXY=
