--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "bot",
     "telegram"
   ],
+  "engines": {
+    "node": ">=12"
+  },
   "author": "Boris Ryabov",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.19.2",
     "date-fns": "^2.14.0",
     "dotenv-safe": "^8.2.0",
-    "feedparser": "^2.2.10",
     "get-urls": "^9.2.0",
     "iconv-lite": "^0.5.1",
     "interval-promise": "^1.4.0",
@@ -25,12 +28,12 @@
     "p-limit": "^2.3.0",
     "pg": "^8.2.1",
     "pg-native": "^3.0.0",
+    "pickup": "^8.1.0",
     "pretty-quick": "^2.0.1",
     "reflect-metadata": "^0.1.13",
-    "request": "^2.88.2",
     "telegraf": "^3.38.0",
     "telegraf-i18n": "^6.6.0",
-    "telegraf-inline-menu": "^5.0.0-beta.4",
+    "telegraf-inline-menu": "^5.0.0-beta.5",
     "telegraf-stateless-question": "^0.1.1",
     "typeorm": "^0.2.25",
     "winston": "^3.2.1"
@@ -39,11 +42,10 @@
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@types/dotenv-safe": "^8.1.0",
-    "@types/feedparser": "^2.2.3",
-    "@types/node": "^14.0.6",
+    "@types/node": "^12.12.44",
     "@types/request": "^2.48.5",
-    "@typescript-eslint/eslint-plugin": "^3.0.2",
-    "@typescript-eslint/parser": "^3.0.2",
+    "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/parser": "^3.1.0",
     "eslint": "^7.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
@@ -51,7 +53,7 @@
     "husky": "^4.2.5",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
-    "typescript": "^3.9.3"
+    "typescript": "^3.9.5"
   },
   "husky": {
     "hooks": {
